# kotlin-c2w

./: .gitattributes  .gitignore  .gitmodules  PHASES.md  README.md  ROADMAP-prebaked-snapshots.md  container-registry-pr-guidance.md  task.ms  validate-c2w-wasi.sh
.github/workflows/: android.yml  build-images.yml  build.yml  coverage.yml  docker-publish.yml  pr-check.yml  release.yml  security-scan.yml  smoke-test.yml  vuln-response.yml
android-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-app-wamr/: .gitignore  Dockerfile  build-docker.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
android-app-wamr/app/: build.gradle.kts
android-app-wamr/app/src/androidTest/kotlin/com/example/c2wdemo/: FriscyRuntimeInstrumentationTest.kt
android-app-wamr/app/src/main/: AndroidManifest.xml
android-app-wamr/app/src/main/assets/: alpine.aot  hello.elf  image_registry.json
android-app-wamr/app/src/main/cpp/: CMakeLists.txt  c2w_runtime.cpp  friscy_runtime.cpp
android-app-wamr/app/src/main/cpp/friscy/: android_io.hpp  elf_loader.hpp  network.hpp  syscalls.hpp  vfs.hpp
android-app-wamr/app/src/main/java/com/termux/view/: GestureAndScaleRecognizer.java  TerminalRenderer.java  TerminalView.java  TerminalViewClient.java  WasmTerminalBridge.java
android-app-wamr/app/src/main/java/com/termux/view/textselection/: TextSelectionCursorController.java  TextSelectionHandleView.java
android-app-wamr/app/src/main/kotlin/com/example/c2wdemo/: BackSpineHandler.kt  CompanionClient.kt  FriscyRuntime.kt  ImageManager.kt  ImagePickerActivity.kt  MainActivity.kt  SnapshotManager.kt  VmService.kt  WamrRuntime.kt
android-app-wamr/app/src/main/kotlin/com/example/c2wdemo/data/: FriscyPreferences.kt  ImageManager.kt
android-app-wamr/app/src/main/kotlin/com/example/c2wdemo/gauge/: LedDigit.kt  StatRail.kt  SystemStatsProvider.kt  ZimStatusGauge.kt
android-app-wamr/app/src/main/kotlin/com/example/c2wdemo/ime/: ControlFocusInsetsAnimationCallback.kt  ImeUtils.kt  InsetsAnimationLinearLayout.kt  RootViewDeferringInsetsCallback.kt  SimpleImeAnimationController.kt  TranslateDeferringInsetsAnimationCallback.kt
android-app-wamr/app/src/main/kotlin/com/example/c2wdemo/terminal/: AnsiTerminalParser.kt  FriscyTerminalBridge.kt  FriscyTerminalView.kt
android-app-wamr/app/src/main/kotlin/com/example/c2wdemo/ui/: OnboardingScreen.kt
android-app-wamr/app/src/main/kotlin/com/example/c2wdemo/ui/theme/: ZimColors.kt
android-app-wamr/app/src/main/res/drawable/: ic_export.xml  ic_import.xml  ic_notification.xml  ic_snapshot.xml  ic_switch.xml  invader_zim_frame.xml  zim_button.xml  zim_helper_bar_bg.xml  zim_key_bg.xml  zim_top_bar_bg.xml
android-app-wamr/app/src/main/res/layout/: activity_main.xml
android-app-wamr/app/src/main/res/values/: strings.xml  themes.xml
android-app-wamr/app/src/test/kotlin/com/example/c2wdemo/gauge/: SystemStatsProviderTest.kt
android-app-wamr/app/src/test/kotlin/com/example/c2wdemo/terminal/: AnsiTerminalParserTest.kt
android-app-wamr/container-registry/: build.gradle.kts
android-app-wamr/container-registry/src/main/kotlin/com/example/c2wdemo/registry/: ContainerPuller.kt  EstargzParser.kt  ImageReference.kt  LazyLayerReader.kt  OciModels.kt  RegistryClient.kt  TarReader.kt  WasmArtifactProvider.kt
android-app-wamr/container-registry/src/test/kotlin/com/example/c2wdemo/registry/: EstargzParserTest.kt  ImageReferenceTest.kt  OciModelsTest.kt  RegistryClientTest.kt  TarReaderTest.kt  WasmArtifactProviderTest.kt
android-app/app/: build.gradle.kts
android-app/app/src/main/kotlin/com/example/c2wdemo/: MainActivity.kt
android-app/app/src/main/res/drawable/: glow_accent_cyan.xml  glow_accent_pink.xml  zim_input_field.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: themes.xml
images/alpine-base/: Dockerfile
images/claude-code/: Dockerfile
images/codex-cli/: Dockerfile
images/gemini-cli/: Dockerfile
scripts/: install_pkgs.sh
